--- a/2.6 roshamboBuild/Base.lproj/Main.storyboard
+++ b/2.6 roshamboBuild/Base.lproj/Main.storyboard
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -13,65 +12,61 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="__6_roshamboBuild" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Eub-JA-RJh" userLabel="oneVerticalStack">
-                                <rect key="frame" x="20" y="44" width="360" height="852"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="klb-UE-zku" userLabel="oneVerticalStack">
+                                <rect key="frame" x="10" y="50" width="355" height="577"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rAB-gw-uCm" userLabel="topHorizontalStack">
-                                        <rect key="frame" x="0.0" y="0.0" width="360" height="273"/>
-                                    </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KcJ-rj-bc3" userLabel="imagesHorizontalStack">
-                                        <rect key="frame" x="0.0" y="273" width="360" height="79"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LhN-we-Oep" userLabel="imagesHorizontalStack">
+                                        <rect key="frame" x="0.0" y="0.0" width="355" height="551.5"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D8k-V3-67B">
-                                                <rect key="frame" x="0.0" y="0.0" width="120" height="79"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="120" id="4jf-VV-03b"/>
-                                                </constraints>
-                                                <state key="normal" title="Button"/>
-                                                <buttonConfiguration key="configuration" style="plain" image="1rock">
-                                                    <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" scale="default"/>
-                                                </buttonConfiguration>
+                                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" horizontalCompressionResistancePriority="749" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dDU-S6-ROP" userLabel="rock">
+                                                <rect key="frame" x="0.0" y="0.0" width="112.5" height="551.5"/>
+                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                <state key="normal" image="rockBig">
+                                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="default"/>
+                                                </state>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CSS-Tg-Oxx">
-                                                <rect key="frame" x="120" y="0.0" width="120" height="79"/>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iz0-ep-YtV" userLabel="paper">
+                                                <rect key="frame" x="112.5" y="0.0" width="130" height="551.5"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="120" id="qT4-J8-TTs"/>
+                                                    <constraint firstAttribute="width" constant="130" id="doh-TR-CxD"/>
                                                 </constraints>
-                                                <state key="normal" title="Button"/>
-                                                <buttonConfiguration key="configuration" style="plain" image="paper"/>
+                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                <state key="normal" image="paperBig"/>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FBI-wf-Wf3">
-                                                <rect key="frame" x="240" y="0.0" width="120" height="79"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="120" id="7hl-bA-Lhg"/>
-                                                </constraints>
-                                                <state key="normal" title="Button"/>
-                                                <buttonConfiguration key="configuration" style="plain" image="scissors"/>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s6m-9F-hnd" userLabel="scissors">
+                                                <rect key="frame" x="242.5" y="0.0" width="112.5" height="551.5"/>
+                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                <state key="normal" image="scissorsBig"/>
                                             </button>
                                         </subviews>
-                                    </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xGT-Qv-aMS" userLabel="bottomHorizontalStack">
-                                        <rect key="frame" x="0.0" y="352" width="360" height="500"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="500" id="LhQ-5T-AIM"/>
+                                            <constraint firstItem="iz0-ep-YtV" firstAttribute="centerX" secondItem="LhN-we-Oep" secondAttribute="centerX" id="6rb-KJ-zzn"/>
                                         </constraints>
                                     </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UFQ-B0-Qvf">
+                                        <rect key="frame" x="0.0" y="551.5" width="355" height="25.5"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rock Paper Scissors Go..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s32-Su-H3y">
+                                                <rect key="frame" x="0.0" y="0.0" width="355" height="25.5"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
                                 </subviews>
-                                <constraints>
-                                    <constraint firstItem="KcJ-rj-bc3" firstAttribute="centerX" secondItem="Eub-JA-RJh" secondAttribute="centerX" id="aGv-YL-jDm"/>
-                                </constraints>
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemPurpleColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="Eub-JA-RJh" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="7yM-9o-mXA"/>
-                            <constraint firstItem="Eub-JA-RJh" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="cFB-TF-g7M"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Eub-JA-RJh" secondAttribute="trailing" constant="34" id="cuL-h5-0Yx"/>
-                            <constraint firstAttribute="bottom" secondItem="Eub-JA-RJh" secondAttribute="bottom" id="zlq-33-4pj"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="klb-UE-zku" secondAttribute="trailing" constant="10" id="J7g-rn-XLR"/>
+                            <constraint firstItem="klb-UE-zku" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="X8T-eg-LUn"/>
+                            <constraint firstItem="klb-UE-zku" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" constant="-40" id="nyH-iy-tzN"/>
+                            <constraint firstItem="klb-UE-zku" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="50" id="s7d-mA-GSU"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -84,10 +79,10 @@
             <objects>
                 <viewController id="P0C-pj-XgQ" customClass="ResultRpsViewController" customModule="__6_roshamboBuild" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3Sv-KL-NT4">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <viewLayoutGuide key="safeArea" id="O0l-sg-hIe"/>
-                        <color key="backgroundColor" systemColor="systemPurpleColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6Xb-wO-u0z" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -96,11 +91,8 @@
         </scene>
     </scenes>
     <resources>
-        <image name="1rock" width="1378" height="1378"/>
-        <image name="paper" width="75" height="65"/>
-        <image name="scissors" width="75" height="65"/>
-        <systemColor name="systemPurpleColor">
-            <color red="0.68627450980392157" green="0.32156862745098042" blue="0.87058823529411766" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
+        <image name="paperBig" width="200" height="200"/>
+        <image name="rockBig" width="200" height="200"/>
+        <image name="scissorsBig" width="200" height="200"/>
     </resources>
 </document>
