--- a/7.2RoshamboNavigation/Base.lproj/Main.storyboard
+++ b/7.2RoshamboNavigation/Base.lproj/Main.storyboard
@@ -59,6 +59,7 @@
                                                 <state key="normal" title="Paper" image="paper"/>
                                                 <connections>
                                                     <action selector="playPaper:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ZAj-0S-e7e"/>
+                                                    <segue destination="P0C-pj-XgQ" kind="show" identifier="play" id="wCh-D8-sXS"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s6m-9F-hnd" userLabel="Scissors">
@@ -185,6 +186,9 @@
             <point key="canvasLocation" x="799" y="94"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="wCh-D8-sXS"/>
+    </inferredMetricsTieBreakers>
     <resources>
         <image name="paper" width="100" height="100"/>
         <image name="rock" width="100" height="100"/>
